--- a/scss/elements/_elements.forms.scss
+++ b/scss/elements/_elements.forms.scss
@@ -78,10 +78,10 @@ textarea {
 // -----------------------------------------------------------------------------
 
 select {
-	background-image: url("images/select-arrow.svg");
-	background-position: center right;
+	background-image: url("images/icons/select-arrow.svg");
+	background-position: right 8px center;
 	background-repeat: no-repeat;
-	background-size: 30px 30px;
+	background-size: 9px 11px;
 	box-shadow: none;
 	padding: 0;
 	text-overflow: ellipsis;
